# jobbr

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  deploy.sh  docker-compose.yml
.github/workflows/: deploy-dev.yml
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/api/: index.py
backend/app/: config.py  database.py  dependencies.py  main.py  models.py  schemas.py
backend/app/agents/: llm.py
backend/app/routers/: admin.py  agents.py  auth.py  connections.py  notifications.py  profiles.py  swipes.py
deploy/: .env.dev.example  deploy.sh
deploy/cloudflared/: .gitignore  config.yml
frontend/: .env.example  Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/admin/: page.tsx
frontend/src/app/api/[...path]/: route.ts
frontend/src/app/auth/approve/: page.tsx
frontend/src/app/auth/verify/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/matches/: page.tsx
frontend/src/app/profile/create/: page.tsx
frontend/src/app/profile/edit/: page.tsx
frontend/src/components/: Navbar.tsx
frontend/src/lib/: api.ts  auth.ts  urls.ts
